--- a/Day5/Hotel/index.html
+++ b/Day5/Hotel/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Royal Orchid - Heavenly feel</title>
+    <title>Yuna - Heavenly feel</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -18,7 +18,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Royal Orchid</a>
+        <a class="navbar-brand" href="index.html">Yuna</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -56,7 +56,7 @@
             />
             <div class="carousel-caption d-none d-md-block">
               <h3>Beach</h3>
-              <p>Relax on sun-kissed beaches.</p>
+              <p style="color:rgb(3, 110, 3)">Relax on sun-kissed beaches.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -108,7 +108,7 @@
     <section class="container my-5">
       <div class="row align-items-center">
         <div class="col-lg-7">
-          <h2>About Royal Orchid</h2>
+          <h2>About Yuna</h2>
           <p>
               We offer a diverse menu featuring traditional and contemporary dishes.<br> Our ingredients are locally sourced and fresh.Enjoy a warm and inviting atmosphere with excellent service.Perfect for family dinners and group celebrations.Visit us for an unforgettable dining experience! Well-suited for family stays, corporate travel, and small events, with seasonal packages and loyalty benefits.</p>
 
@@ -324,7 +324,7 @@
       <div
         class="container d-flex flex-column flex-md-row justify-content-between align-items-center"
       >
-        <div>© <span id="year">Royal Orchid - Heavenly feel</span></div>
+        <div>© <span id="year">Yuna - Heavenly feel</span></div>
         <div>
           <a href="#" class="text-light me-3">Privacy</a>
           <a href="#" class="text-light">Terms</a>
