--- a/Day5/Hotel/contact.html
+++ b/Day5/Hotel/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Royal Orchid-Book/contact</title>
+    <title>Yuna-Book/contact</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,7 +15,7 @@
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Royal Orchid</a>
+        <a class="navbar-brand" href="index.html">Yuna</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -128,8 +128,8 @@
         <!-- MAP / INFO -->
         <div class="col-lg-6">
           <h5>Contact Details</h5>
-          <p>Email: royalorchid@query.example</p>
-          <p>Phone: +1 555 98765</p>
+          <p>Email: yuna@query.example</p>
+          <p>Phone: +1 555 9876</p>
 
           <!-- simple iframe map (placeholder) -->
           <div class="ratio ratio-4x3 rounded-3 shadow-sm">
@@ -165,7 +165,7 @@
     <!-- FOOTER -->
     <footer class="bg-dark text-light py-4 mt-5">
       <div class="container d-flex justify-content-between">
-        <div>© <span id="year3"></span> Royal Orchid</div>
+        <div>© <span id="year3"></span> Yuna</div>
         <div><a href="index.html" class="text-light">Home</a></div>
       </div>
     </footer>
