--- a/Day5/Hotel/packages.html
+++ b/Day5/Hotel/packages.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Royal Orchid- Packages</title>
+    <title>Yuna Packages</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Royal Orchid</a>
+        <a class="navbar-brand" href="index.html">Yuna</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -218,7 +218,7 @@
     <!-- FOOTER -->
     <footer class="bg-dark text-light py-4 mt-5">
       <div class="container d-flex justify-content-between">
-        <div>© <span id="year2"></span> Royal Orchid</div>
+        <div>© <span id="year2"></span>Yuna</div>
         <div><a href="contact.html" class="text-light">Contact</a></div>
       </div>
     </footer>
